[package]
name = "workspace"
version = "0.1.0"
authors = ["birnamwood <birnamwood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
itertools = "0.10.0"